fix: fix the breaking of select element on iOS

--- a/src/app.css
+++ b/src/app.css
@@ -40,6 +40,9 @@
         @apply block border border-gray-400 text-black bg-white dark:bg-gray-800 dark:text-gray-300 dark:border-gray-900 dark:font-semibold py-3.5 px-4 mb-4 w-full rounded-lg;
         box-shadow: none;
     }
+    .select {
+        @apply appearance-none h-[54px];
+    }
     .input:focus, .input:hover {
         @apply border-gray-900 dark:border-dark;
         box-shadow: none;
